# Ray_ECS_CPP

./: .clang-format  .clangd  CMakeLists.txt  README.md  ecs_architecture.md  ecs_modernization.md  ecs_ref.md  ecs_tmp_reference.md  run.sh
bench/: bench.hpp  bench_main.cpp
ecs/: archetype.hpp  archtype.hpp  common.hpp  component_list.hpp  component_manager.hpp  component_registery.hpp  component_registry.hpp  components.hpp  ecs.hpp  enemy_system.hpp  entity_manager.hpp  input_system.hpp  lifetime_system.hpp  physics_system.hpp  render_system.hpp  system_base.hpp  system_list.hpp  system_manager.hpp  system_manager_inst.hpp  system_registry.hpp  world.hpp
ecs/components/: 2d_comps.hpp
ecs/systems/: physics_system.hpp  render_system.hpp
include/: archetype.hpp  entity_manager.hpp  wasi.hpp
include/ecs/: archetype.hpp  common.hpp  component_manager.hpp  component_registry.hpp  entity_manager.hpp  game_registry.hpp  system_base.hpp  system_manager.hpp  system_registry.hpp  world.hpp
include/ecs/components/: 2d_comps.hpp
include/ecs/systems/: gravity_system.hpp  movement_system.hpp  physics_system.hpp
src/: main.cpp
